# cw_game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  cw_game.cbp  logger.cpp  main.cpp
graphics/: descriptor_set.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  window.cpp
graphics/buffers/: buffer_base.cpp  buffer_base.h  index_buffer.cpp  index_buffer.h  staging_buffer.cpp  staging_buffer.h  uniform_buffer.h  uniform_buffer.tpp  vertex_buffer.cpp  vertex_buffer.h
graphics/misc/: fps_counter.cpp
logic/: logic.cpp
maths/: mat.h  maths_core.h  vec.h  vec.tpp
resources/: compile.bat  compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/: logger.h  main.cpp
src/graphics/: descriptor_set.cpp  pipeline.cpp  pipeline_layout.cpp  pipeline_layout.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  renderer.inl  window.cpp  window.h
src/graphics/buffers/: buffer_base.h  index_buffer.h  staging_buffer.cpp  staging_buffer.h  uniform_buffer.h  vertex_buffer.cpp
src/graphics/misc/: fps_counter.cpp  fps_counter.h
src/logic/: logic.h
src/maths/: mat.h  mat.tpp  maths_core.cpp
wip_objects/: camera.cpp  camera.h
